--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,8 @@
   "extends": "next/core-web-vitals",
   "rules": {
     "react-hooks/exhaustive-deps": "off",
-    "no-unused-vars": "error"
+    "no-unused-vars": "error",
+    "@next/next/no-img-element": "off",
+    "@next/next/no-before-interactive-script-outside-document": "off"
   }
 }
