--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
     "@next/next/no-img-element": "off",
     "@next/next/no-before-interactive-script-outside-document": "off",
     "@next/next/no-sync-scripts": "off",
-    "@next/next/no-css-tags": "off"
+    "@next/next/no-css-tags": "off",
+    "jsx-a11y/alt-text": "off"
   }
 }
