--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,10 @@
   "extends": "next/core-web-vitals",
   "rules": {
     "react-hooks/exhaustive-deps": "off",
-    "no-unused-vars": "error",
+    "no-unused-vars": [
+      "error",
+      { "argsIgnorePattern": "^_", "varsIgnorePattern": "^_" }
+    ],
     "@next/next/no-img-element": "off",
     "@next/next/no-before-interactive-script-outside-document": "off",
     "@next/next/no-sync-scripts": "off",
